--- a/src/it/projects/profile-with-deps-inherit-parent-depMgmt-flatten-dep-all-inactive/pom.xml
+++ b/src/it/projects/profile-with-deps-inherit-parent-depMgmt-flatten-dep-all-inactive/pom.xml
@@ -27,6 +27,9 @@
     <profiles>
         <profile>
             <id>test</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>org.codehaus.mojo.flatten.its</groupId>
