--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,8 @@
 
   <name>Maven Flatten Plugin</name>
 
-  <description>
-    Plugin to generate flattened POM (reduced and resolved information required for consumers of maven repositories)
-    and to use (install, sign, deploy) it instead of original pom.xml.
-  </description>
+  <description>Plugin to generate flattened POM (reduced and resolved information required for consumers of maven repositories)
+    and to use (install, sign, deploy) it instead of original pom.xml.</description>
 
   <url>https://www.mojohaus.org/flatten-maven-plugin/</url>
 
@@ -64,10 +62,10 @@
       <id>rfscholte</id>
       <name>Robert Scholte</name>
       <email>rfscholte@apache.org</email>
-      <timezone>Europe/Amsterdam</timezone>
       <roles>
         <role>developer</role>
       </roles>
+      <timezone>Europe/Amsterdam</timezone>
     </developer>
     <developer>
       <id>khmarbaise</id>
@@ -80,10 +78,10 @@
       <id>sjaranowski</id>
       <name>Slawomir Jaranowski</name>
       <email>sjaranowski@apache.org</email>
-      <timezone>Europe/Warsaw</timezone>
       <roles>
         <role>developer</role>
       </roles>
+      <timezone>Europe/Warsaw</timezone>
     </developer>
   </developers>
 
@@ -124,8 +122,8 @@
   <scm>
     <connection>scm:git:https://github.com/mojohaus/flatten-maven-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mojohaus/flatten-maven-plugin.git</developerConnection>
-    <url>https://github.com/mojohaus/flatten-maven-plugin/tree/master</url>
     <tag>HEAD</tag>
+    <url>https://github.com/mojohaus/flatten-maven-plugin/tree/master</url>
   </scm>
 
   <properties>
@@ -283,15 +281,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-invoker-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>install</goal>
-                  <goal>integration-test</goal>
-                  <goal>verify</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
               <debug>true</debug>
               <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
@@ -310,19 +299,20 @@
               <postBuildHookScript>verify</postBuildHookScript>
               <preBuildHookScript>setup</preBuildHookScript>
             </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>install</goal>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
           </plugin>
 
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>mrm-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>start</goal>
-                  <goal>stop</goal>
-                </goals>
-              </execution>
-            </executions>
             <configuration>
               <propertyName>repository.proxy.url</propertyName>
               <repositories>
@@ -335,6 +325,14 @@
                 <proxyRepo />
               </repositories>
             </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>start</goal>
+                  <goal>stop</goal>
+                </goals>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
